1、visualVm中使用jconsole  2、直接内存问题，不归属jvm管  3、jvm垃圾收集器整理